2024-05-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/peeph.def,
	  support/regression/tests/bug-3733.c:
	  Fix bug #3733.

2024-05-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/sha3-256.c:
	  SHA3-256 test assumes little endian, so disable it for other systems.

2024-05-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  mcs51 named address space clarifications.
	* support/regression/tests/sha3-256.c:
	  Test for bug #3731.

2024-05-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/peeph.def:
	  Fix an issue in previous commit.

2024-04-30 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/ralloc2.cc,
	  src/z80/peeph.def:
	  Improve use of register a and (hl) in comparisons.

2024-04-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  Fix an issue in the handling of register hl vs a in write via pointer.

2024-04-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/ralloc2.cc:
	  Fix bug #3730.

2024-04-25 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3730.c:
	  Test for bug #3730.

2024-04-24 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Update documentation on implementation-defined behaviour.
	* sdas/astlcs90/t90.h,
	  sdas/astlcs90/t90mch.c,
	  sdas/astlcs90/t90pst.c,
	  src/z80/gen.c:
	  Use lda for tlcs90 codegen.

2024-04-23 Felix Salfelder <felix AT salfelder.org>

	* support/cpp/gcc/cc1_dummies.cc
	  Amend unused function prototypes. Fixes #3725

2024-04-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Global operand handling fixes.

2024-04-22 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  support/regression/ports/ucz80-unsafe-read:
	  Allow use 16-bit loads from memory to load 8-bit registers.

2024-04-22 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c,
	  src/z80/peeph.def: